Fixed in-compatible jvm option for Java v1.8